# datascience-kbank-chat-demo

./: .env.template  .gitignore  AI ASSISTANT IDS AND SPECIFICATION.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
data/: chats.json  credit_cards.json  users.json
promotion_search/: .env.template.docker  .env.template.local  Dockerfile  docker-compose.yml  embed_promotions.ipynb  readme.md  search_promotions.py  service.py
promotion_search/data/: Recommend Promotion Case.xlsx  promotions.json  result_promotions.json
promotion_search/data/raw/: promotion_special_day.csv  promotions_with_summary.csv
promotion_search/src/: embedding.py  service.py  uploading.py
promotion_search/src/utils/: embedder.py  searcher.py
server/: agent.py  chat.py  db.py  main.py  user.py
server/chat/: basic.py  context.py  nice_talk.py  promotion.py  specialist.py
server2/: Dockerfile  main.py  user.py
server2/chat/: __init__.py  api.py  processor.py  utils.py
server2/data/: users.json
www/: package-lock.json  package.json
www/public/: index.html
www/src/: ActivityPanel.tsx  App.tsx  ChatPage.tsx  ChatPanel.tsx  LoginPage.tsx
www/src/components/: Footer.tsx  Header.tsx
